# ai_pr_review

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml  test_module.py
.basedpyright/: baseline.json
.github/workflows/: ci.yml
docs/: eventual_goals.md  logging.md
docs/library_docs/: kit.md
scripts/: embed_repo.py  sync_guidelines.py
src/: logkit.py  logkit.pyi
src/ai_pr_review/: __init__.py  __main__.py  cli.py  context.py  errors.py  github.py  llm.py  main.py  repo.py  review.py
tests/: conftest.py  test_cli.py  test_context.py  test_llm.py  test_module.py  test_review_workflow.py  test_split_modules.py
